fix weird overflow thing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,6 @@ body {
   font-weight: normal;
   font-size: 18px;
   line-height: 28px;
-  overflow-x: hidden;
 }
 
 #__next {
@@ -26,7 +25,7 @@ body {
 div.tooltip {
   position: absolute;
   padding: 2px;
-  width: 3px;
+  width: 375px;
   font: 12px sans-serif;
   background: #fff;
   border: 0px;
